tests/init_state/overwrite/overwrite_ref_typed_field_with_unfulfilled_obligation_errors.sim

        struct RefBox: Move { p: &mut i64 }
        fn f(x: i64, x2: i64) {
          b: RefBox;
          y: i64;
          entry:
            b.p = &mut x;
            y = move b.p.*;
            b.p = &mut x2;
            return
        }
        